code/dotnet/Vault/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Vault client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.Vault)](https://www.nuget.org/packages/FactSet.SDK.Vault)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Vault Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.8.11
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.Vault -v 0.8.11
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.Vault -Version 0.8.11
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.Vault.Api;
using FactSet.SDK.Vault.Client;
using FactSet.SDK.Vault.Model;

namespace Example
{
    public static class GetAccountsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.Vault.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AccountsApi(config);
            var path = "\"Client:Foo/Bar\"";  // string | The directory to get the accounts and sub-directories in (default to "Client:Foo/Bar")

            try
            {
                // Get accounts and sub-directories in a directory
                AccountDirectories result = apiInstance.GetAccounts(path);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AccountsApi.GetAccounts: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*CalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/CalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*CalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/CalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*CalculationsApi* | [**GetCalculationStatusSummaries**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/CalculationsApi.md#getcalculationstatussummaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*CalculationsApi* | [**RunCalculation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/CalculationsApi.md#runcalculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*ComponentsApi* | [**GetVaultComponentById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ComponentsApi.md#getvaultcomponentbyid) | **GET** /analytics/lookups/v2/engines/vault/components/{id} | Get Vault component by id
*ComponentsApi* | [**GetVaultComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ComponentsApi.md#getvaultcomponents) | **GET** /analytics/lookups/v2/engines/vault/components | Get Vault components
*ConfigurationsApi* | [**GetVaultConfigurationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ConfigurationsApi.md#getvaultconfigurationbyid) | **GET** /analytics/lookups/v2/engines/vault/configurations/{id} | Get Vault configuration by id
*ConfigurationsApi* | [**GetVaultConfigurations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ConfigurationsApi.md#getvaultconfigurations) | **GET** /analytics/lookups/v2/engines/vault/configurations | Get Vault configurations
*DatesApi* | [**ConvertVaultDatesToAbsoluteFormat**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/DatesApi.md#convertvaultdatestoabsoluteformat) | **GET** /analytics/lookups/v2/engines/vault/dates | Convert Vault dates to absolute format
*DocumentsApi* | [**GetVaultDocuments**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/DocumentsApi.md#getvaultdocuments) | **GET** /analytics/lookups/v2/engines/vault/documents/{path} | Get Vault documents and sub-directories in a directory
*FrequenciesApi* | [**GetVaultFrequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/FrequenciesApi.md#getvaultfrequencies) | **GET** /analytics/lookups/v2/engines/vault/frequencies | Get Vault frequencies


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/AccountDirectories.md)
 - [Model.Calculation](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/Calculation.md)
 - [Model.CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/CalculationStatus.md)
 - [Model.CalculationStatusSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/CalculationStatusSummary.md)
 - [Model.CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/CalculationUnitStatus.md)
 - [Model.ComponentAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ComponentAccount.md)
 - [Model.ComponentBenchmark](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ComponentBenchmark.md)
 - [Model.ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ComponentSummary.md)
 - [Model.ConfigurationAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/ConfigurationAccount.md)
 - [Model.DateParametersSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/DateParametersSummary.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/DocumentDirectories.md)
 - [Model.Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/Frequency.md)
 - [Model.PACalculationColumn](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PACalculationColumn.md)
 - [Model.PACalculationGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PACalculationGroup.md)
 - [Model.PACalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PACalculationParameters.md)
 - [Model.PADateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PADateParameters.md)
 - [Model.PAIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PAIdentifier.md)
 - [Model.PubCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PubCalculationParameters.md)
 - [Model.PubDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PubDateParameters.md)
 - [Model.PubIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/PubIdentifier.md)
 - [Model.SPARCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/SPARCalculationParameters.md)
 - [Model.SPARDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/SPARDateParameters.md)
 - [Model.SPARIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/SPARIdentifier.md)
 - [Model.VaultCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/VaultCalculationParameters.md)
 - [Model.VaultComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/VaultComponent.md)
 - [Model.VaultConfiguration](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/VaultConfiguration.md)
 - [Model.VaultConfigurationSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/VaultConfigurationSummary.md)
 - [Model.VaultDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/VaultDateParameters.md)
 - [Model.VaultIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v2/docs/VaultIdentifier.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
