code/dotnet/Vault/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Vault client library for .NET

[![API Version](https://img.shields.io/badge/api-v3.16.0-blue)](https://developer.factset.com/api-catalog/vault-api)
[![Nuget](https://img.shields.io/badge/nuget-v2.0.1-orange)](https://www.nuget.org/packages/FactSet.SDK.Vault/2.0.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.16.0
- SDK version: 2.0.1
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.Vault -v 2.0.1
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.Vault -Version 2.0.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.Vault.Api;
using FactSet.SDK.Vault.Client;
using FactSet.SDK.Vault.Model;

namespace Example
{
    public static class GetAccountsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.Vault.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AccountsApi(config);
            var path = "Client:";  // string | The directory to get the accounts and sub-directories in

            try
            {
                // Get accounts and sub-directories in a directory
                AccountDirectoriesRoot result = apiInstance.GetAccounts(path);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AccountsApi.GetAccounts: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*ComponentsApi* | [**GetVaultComponentById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ComponentsApi.md#getvaultcomponentbyid) | **GET** /analytics/engines/vault/v3/components/{id} | Get Vault component by id
*ComponentsApi* | [**GetVaultComponents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ComponentsApi.md#getvaultcomponents) | **GET** /analytics/engines/vault/v3/components | Get Vault components
*ConfigurationsApi* | [**GetVaultConfigurationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ConfigurationsApi.md#getvaultconfigurationbyid) | **GET** /analytics/engines/vault/v3/configurations/{id} | Get Vault configuration by id
*ConfigurationsApi* | [**GetVaultConfigurations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ConfigurationsApi.md#getvaultconfigurations) | **GET** /analytics/engines/vault/v3/configurations | Get Vault configurations
*DatesApi* | [**ConvertVaultDatesToAbsoluteFormat**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/DatesApi.md#convertvaultdatestoabsoluteformat) | **GET** /analytics/engines/vault/v3/dates | Convert Vault dates to absolute format
*DocumentsApi* | [**GetVaultDocuments**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/DocumentsApi.md#getvaultdocuments) | **GET** /analytics/engines/vault/v3/documents/{path} | Get Vault documents and sub-directories in a directory
*FrequenciesApi* | [**GetVaultFrequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/FrequenciesApi.md#getvaultfrequencies) | **GET** /analytics/engines/vault/v3/frequencies | Get Vault frequencies
*VaultCalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/vault/v3/calculations/{id} | Cancel Vault calculation by id
*VaultCalculationsApi* | [**GetAllCalculations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationsApi.md#getallcalculations) | **GET** /analytics/engines/vault/v3/calculations | Get all calculations
*VaultCalculationsApi* | [**GetCalculationParameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationsApi.md#getcalculationparameters) | **GET** /analytics/engines/vault/v3/calculations/{id} | Get Vault calculation parameters by id
*VaultCalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/vault/v3/calculations/{id}/status | Get Vault calculation status by id
*VaultCalculationsApi* | [**GetCalculationUnitResultById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationsApi.md#getcalculationunitresultbyid) | **GET** /analytics/engines/vault/v3/calculations/{id}/units/{unitId}/result | Get Vault calculation result by id
*VaultCalculationsApi* | [**PostAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationsApi.md#postandcalculate) | **POST** /analytics/engines/vault/v3/calculations | Create and Run Vault calculation
*VaultCalculationsApi* | [**PutAndCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationsApi.md#putandcalculate) | **PUT** /analytics/engines/vault/v3/calculations/{id} | Create or Update Vault calculation and run it.


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/AccountDirectories.md)
 - [Model.AccountDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/AccountDirectoriesRoot.md)
 - [Model.CalculationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationMeta.md)
 - [Model.CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationStatus.md)
 - [Model.CalculationStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationStatusMeta.md)
 - [Model.CalculationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationStatusRoot.md)
 - [Model.CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationUnitStatus.md)
 - [Model.CalculationUnitStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationUnitStatusMeta.md)
 - [Model.CalculationsSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationsSummary.md)
 - [Model.CalculationsSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/CalculationsSummaryRoot.md)
 - [Model.ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ClientErrorResponse.md)
 - [Model.ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ComponentSummary.md)
 - [Model.ComponentSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ComponentSummaryRoot.md)
 - [Model.ConfigurationAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ConfigurationAccount.md)
 - [Model.DateParametersSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/DateParametersSummary.md)
 - [Model.DateParametersSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/DateParametersSummaryRoot.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/DocumentDirectories.md)
 - [Model.DocumentDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/DocumentDirectoriesRoot.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ErrorSource.md)
 - [Model.Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/Frequency.md)
 - [Model.FrequencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/FrequencyRoot.md)
 - [Model.ObjectRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/ObjectRoot.md)
 - [Model.PaginationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/PaginationInfo.md)
 - [Model.PaginationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/PaginationMeta.md)
 - [Model.VaultCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationParameters.md)
 - [Model.VaultCalculationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultCalculationParametersRoot.md)
 - [Model.VaultComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultComponent.md)
 - [Model.VaultComponentRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultComponentRoot.md)
 - [Model.VaultConfiguration](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultConfiguration.md)
 - [Model.VaultConfigurationRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultConfigurationRoot.md)
 - [Model.VaultConfigurationSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultConfigurationSummary.md)
 - [Model.VaultConfigurationSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultConfigurationSummaryRoot.md)
 - [Model.VaultDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultDateParameters.md)
 - [Model.VaultIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Vault/v3/docs/VaultIdentifier.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
